--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </div>
   <input type="hidden" name="entry.1627175509" id="entry0003" value="">
   <input type="hidden" name="entry.213784185" id="entry0004" value="">
-  <input type="submit" value="送信">
-  <iframe name="hidden_iframe" style="display:none"></iframe>
+  <input type="submit" value="送信" id="submitBtn" onclick="changeBtnColor()">
+  <iframe name="hidden_iframe" style="display:none" ></iframe>
 </form>
 <script>
 function showOtherOption(value) {
@@ -72,5 +72,13 @@ function showOtherOption(value) {
     if(subCategory2) {
         document.getElementById("entry0004").value = subCategory2.value;
     }
+  }
+</script>
+<script>
+  function changeBtnColor() {
+    document.getElementById("submitBtn").style.backgroundColor = "#00ccff";
+    setTimeout(function(){
+      document.getElementById("submitBtn").style.backgroundColor = "";
+    }, 500);
   }
 </script>
