--- a/index.html
+++ b/index.html
@@ -82,3 +82,50 @@ function showOtherOption(value) {
     }, 500);
   }
 </script>
+
+<style>
+  body {
+  font-family: Arial, sans-serif;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
+
+input[type="text"], select {
+  width: 100%;
+  padding: 0.5em;
+  margin-bottom: 1em;
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  font-size: 1em;
+}
+
+input[type="radio"] {
+  margin-right: 1em;
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 1em;
+  background-color: lightgray;
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: gray;
+}
+
+#otherOption {
+  margin-top: 1em;
+}
+
+#subCategory {
+  margin-top: 1em;
+}
+</style>
