--- a/index.html
+++ b/index.html
@@ -84,48 +84,48 @@ function showOtherOption(value) {
 </script>
 
 <style>
-  body {
-  font-family: Arial, sans-serif;
+form {
+  width: 500px;
+  margin: 0 auto;
+  text-align: left;
 }
 
 label {
-  display: block;
-  margin-bottom: 0.5em;
+  font-size: 16px;
   font-weight: bold;
+  margin-right: 10px;
 }
 
 input[type="text"], select {
-  width: 100%;
-  padding: 0.5em;
-  margin-bottom: 1em;
-  border: 1px solid lightgray;
-  border-radius: 4px;
-  font-size: 1em;
-}
-
-input[type="radio"] {
-  margin-right: 1em;
+  height: 50px;
+  width: 180px;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
 }
 
 input[type="submit"] {
-  width: 100%;
-  padding: 1em;
-  background-color: lightgray;
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 32px;
   border: none;
-  border-radius: 4px;
-  font-size: 1em;
+  border-radius: 5px;
+  font-size: 16px;
   cursor: pointer;
 }
 
-input[type="submit"]:hover {
-  background-color: gray;
-}
-
 #otherOption {
-  margin-top: 1em;
+  display: none;
 }
 
 #subCategory {
-  margin-top: 1em;
+  display: none;
 }
+
+#食費, #趣味 {
+  display: none;
+}
+
 </style>
